--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,12 +1,13 @@
-{% include "Component/Header.html" %} 
+{% include "Component/Header.html" %}
 {% include "Component/Sidebar.html" %}
+
 <div class="Container content-wrapper">
-    <div class="card"> 
+    <div class="card">
         <div class="card-header">
-            </div>
+            
+            {% include "Component/index.html" %}
         </div>
     </div>
+</div>
+
 {% include "Component/Footer.html" %}
-
-
-
